--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,10 @@
-alembic==0.8.9
-click==6.6
+boto==2.45.0
+dj-database-url==0.4.2
+dj-static==0.0.6
 Django==1.10.5
-Flask==0.11.1
-Flask-Cors==3.0.2
-Flask-Migrate==2.0.1
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
+django-storages==1.5.2
+django-toolbelt==0.0.1
 gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.8
-Mako==1.0.6
-MarkupSafe==0.23
 psycopg2==2.6.2
-python-editor==1.0.3
-six==1.10.0
-SQLAlchemy==1.1.4
-virtualenv==15.1.0
-Werkzeug==0.11.11
+static3==0.7.0
+whitenoise==3.2.3
