--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "webpack",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "npm run build && npm run git-commit && npm run git-push"
+    "deploy": "npm run build && npm run git-commit && npm run git-push",
+    "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
+    "heroku-postbuild": "NODE_ENV=production webpack -p"
   },
   "author": "",
   "license": "ISC",
