--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "npm run build && npm run git-commit && npm run git-push",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-    "heroku-postbuild": "NODE_ENV=production webpack -p"
+    "heroku-postbuild": "npm run webpack:deploy"
   },
   "author": "",
   "license": "ISC",
