--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-static==0.0.6
 Django==1.10.5
 django-storages==1.5.2
 django-toolbelt==0.0.1
+django-webpack-loader==0.5.0
 gunicorn==19.6.0
 psycopg2==2.6.2
 static3==0.7.0
