--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "npm run build && npm run git-commit && npm run git-push",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
-    "heroku-postbuild": "npm run webpack:deploy"
+    "heroku-postbuild": "npm run webpack:deploy",
+    "webpack-watch": "webpack --progress --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
@@ -22,12 +24,14 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "webpack": "^2.6.1",
     "webpack-bundle-tracker": "^0.2.0",
+    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^2.4.5"
   }
 }
