--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-style-tag": "^1.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -29,6 +30,7 @@
     "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-svg-loader": "^1.1.1",
     "webpack": "^2.6.1",
     "webpack-bundle-tracker": "^0.2.0",
     "webpack-cleanup-plugin": "^0.5.1",
