--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "django-react-csrftoken": "^1.0.1",
+    "html-loader": "^0.4.5",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
-    "react-style-tag": "^1.3.2"
+    "react-style-tag": "^1.3.2",
+    "resolve-url-loader": "^2.0.2",
+    "url-loader": "^0.5.9"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -26,12 +30,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "fast-sass-loader": "^1.2.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "jquery": "^3.2.1",
+    "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-svg-loader": "^1.1.1",
+    "sass-loader": "^6.0.6",
     "webpack": "^2.6.1",
     "webpack-bundle-tracker": "^0.2.0",
     "webpack-cleanup-plugin": "^0.5.1",
