--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-bootstrap": "^0.24.2",
+    "react-router-dom": "^4.1.1",
     "react-style-tag": "^1.3.2",
     "resolve-url-loader": "^2.0.2",
     "url-loader": "^0.5.9"
