--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "deploy": "npm run build && npm run git-commit && npm run git-push",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
     "heroku-postbuild": "npm run webpack:deploy",
-    "webpack-watch": "webpack --progress --watch"
+    "webpack-watch": "webpack --progress --watch",
+    "bind": "webpack --module-bind 'png=image-webpack-loader?mimetype=image/png'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "copy-webpack-plugin": "^4.0.1",
     "csurf": "^1.9.0",
     "django-react-csrftoken": "^1.0.1",
     "express": "^4.15.3",
@@ -27,13 +29,16 @@
     "react-router-dom": "^4.1.1",
     "react-style-tag": "^1.3.2",
     "resolve-url-loader": "^2.0.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-root-slash-import": "^1.1.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "fast-sass-loader": "^1.2.5",
