--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "express": "^4.15.3",
     "html-loader": "^0.4.5",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-appear": "^1.0.1",
     "react-bootstrap": "^0.31.0",
+    "react-bootstrap-carousel": "^1.2.0",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
+    "react-slick": "^0.14.11",
     "react-style-tag": "^1.3.2",
+    "react-transition-group": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "url-loader": "^0.5.9",
     "webpack-merge": "^4.1.0"
