--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.9.1",
+    "npm": "5.3.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
